# OOP

./: ActiuneUndo.cpp  ActiuneUndo.h  CMakeLists.txt  Console.cpp  Console.h  FileRepo.cpp  FileRepo.h  GUI.cpp  GUI.h  Locatar.cpp  Locatar.h  LocatarRepo.cpp  LocatarRepo.h  LocatarService.cpp  LocatarService.h  MyTableModel.h  Notificare.cpp  Notificare.h  Observer.h  Teste.cpp  Teste.h  UndoAdaugare.cpp  UndoAdaugare.h  UndoModificare.cpp  UndoModificare.h  UndoStergere.cpp  UndoStergere.h  Validator.cpp  Validator.h  main.cpp
